# goboards-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  docker-compose.local.yml  docker-compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 12a86a612bbc_create_game_table.py  4b78f7283dc1_added_games_table.py  50f397dab777_added_user_and_social_account_tables.py  6615519fbd65_create_area_new_table.py  8d263c7f321b_area_id_added.py  982b66e9d34e_create_meetups.py  af160f50024c_create_cities_and_areas.py  c5b1057b1cef_drop_cities_countries_table.py  d7a0992fb0a7_update_game_table.py  db284f866586_init_areas.py  e4840a83f517_create_sessions.py  f94214a0d8f0_create_countries.py
nginx/: nginx.conf
src/: main.py
src/api/: routing.py
src/api/v1/: routing.py
src/api/v1/areas/controllers/: areas.py
src/api/v1/areas/dependencies/: deps.py
src/api/v1/areas/serializers/: main.py
src/api/v1/auth/controllers/: auth.py
src/api/v1/auth/dependencies/: deps.py
src/api/v1/games/controllers/: games.py
src/api/v1/games/dependencies/: deps.py
src/api/v1/games/serializers/request/: main.py
src/api/v1/games/serializers/response/: main.py
src/api/v1/meetups/controllers/: meetups.py
src/api/v1/meetups/dependencies/: deps.py
src/api/v1/meetups/serializers/request/: main.py
src/api/v1/meetups/serializers/response/: main.py
src/api/v1/oauth2/controllers/: oauth2.py
src/api/v1/oauth2/dependencies/: auth.py  oauth.py
src/api/v1/oauth2/serializers/request/: main.py
src/api/v1/oauth2/serializers/response/: main.py
src/api/v1/users/controllers/: users.py
src/api/v1/users/dependencies/: deps.py
src/api/v1/users/serializers/response/: main.py
src/cmd/main/: main.py
src/cmd/observers/: __init__.py  exception_handler.py  interface.py  routing_handler.py
src/configs/: auth.py  database.py  jwt.py  oauth.py  server.py
src/configs/oauth/: vk.py
src/core/areas/: models.py  services.py
src/core/areas/repository/db/: read_repo.py
src/core/auth/: models.py  services.py
src/core/auth/repository/db/: read_repo.py  update_repo.py
src/core/auth/repository/db/query_builders/: delete_refresh_token.py
src/core/games/: enums.py  models.py  services.py
src/core/games/repository/db/: read_repo.py  update_repo.py
src/core/meetups/: enums.py  models.py  services.py
src/core/meetups/repository/db/: read_repo.py  update_repo.py
src/core/oauth/: exceptions.py  models.py  services.py
src/core/oauth/repository/db/: read_repo.py  update_repo.py
src/core/users/: models.py  services.py
src/core/users/repository/db/: read_repo.py  update_repo.py
src/exceptions/app/: auth.py
src/exceptions/db/: auth.py  games.py  meetups.py  users.py
src/oauth/providers/vk/: access_token_provider.py  account_provider.py  redirect_link_provider.py
src/observers/: exception_handler.py  routing_handler.py
src/utils/db/: base.py  session.py
src/utils/generics/: dto.py  response.py
(+6 files in other folders)
